--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<html lang="en">
+ <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cuenta Regresiva</title>
     <link href="style.css" rel="stylesheet">
-
-<script src="codeCrono.js"></script>
+    <script src="codeCrono.js"></script>
 </head>
 <body>
     <div id="countdown"></div>
